package pt.isel.poo.simplegame.model;

public class Actor extends Element {
    @Override
    public boolean actorCollision(GameModel m) {
        return false;
    }
}
