package pt.isel.poo.simplegame.model;

public interface ModelListener {
    void update(int x, int y, Element e);
}
